[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"
home = "0.5.4"

[dev-dependencies]
tempfile = "3.3.0"
